--- a/gallery.html
+++ b/gallery.html
@@ -93,7 +93,7 @@
                     <header>
                         <span class="date">January 8, 2020</span>
                         <h2><a href="#">Anchor at <br />
-										Vishwapreneru '15</a></h2>
+										Vishwapreneur '15</a></h2>
                     </header>
                     <a href="#" class="image fit"><img src="images/anchor.png" alt="" /></a>
                 </article>
