--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,24 @@
                 <article>
                     <header>
                         <span class="date">January 8, 2020</span>
-                        <h2><a href="#">Arduino Workshop fort<br />
+                        <h2><a href="#">Opening Remarks as Technical Secretary<br />
+										for Gandharva '19</a></h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="images/G19.JPG" alt="" /></a>
+                </article>
+                <article>
+                    <header>
+                        <span class="date">January 8, 2020</span>
+                        <h2><a href="#">Candle lighting ceremony<br />
+										for Gandharva '19</a></h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="images/G19_2.JPG" alt="" /></a>
+                </article>
+
+                <article>
+                    <header>
+                        <span class="date">January 8, 2020</span>
+                        <h2><a href="#">Arduino Workshop for<br />
 										VIIT Students</a></h2>
                     </header>
                     <a href="#" class="image fit"><img src="images/arduino.jpg" alt="" /></a>
