--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         <!-- Footer -->
         <footer id="footer">
-            <section>
+            <!-- <section>
                 <form method="post" action="#">
                     <div class="fields">
                         <div class="field">
@@ -188,7 +188,7 @@
                         <li><input type="submit" value="Send Message" /></li>
                     </ul>
                 </form>
-            </section>
+            </section> -->
             <section class="split contact">
                 <section>
                     <h3>Phone</h3>
