--- a/gallery.html
+++ b/gallery.html
@@ -100,7 +100,7 @@
                 <article>
                     <header>
                         <span class="date">January 8, 2020</span>
-                        <h2><a href="#">IoT Workshopt for<br />
+                        <h2><a href="#">IoT Workshop for<br />
 										SVJCT's College of Science</a></h2>
                     </header>
                     <a href="#" class="image fit"><img src="images/chiplun.jpg" alt="" /></a>
