--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <!-- <h2><a href="#">Sed magna<br />
 										ipsum faucibus</a></h2> -->
                     </header>
-                    <blockquote class="embedly-card">
+                    <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-collect-data-of-your-twitter-connections-daily-python-4-ca5c224b24ff">Python script to collect data of your Twitter connections!! | Daily Python #4</a></h4>
                         <p>This article is a tutorial on how to collect data of your twitter connections using 'tweepy' and Twitter APIs in Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short
                             python articles daily.</p>
@@ -95,7 +95,7 @@
                         <!-- <h2><a href="#">Primis eget<br />
 										imperdiet lorem</a></h2> -->
                     </header>
-                    <blockquote class="embedly-card">
+                    <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-like-the-latest-tweet-of-your-followers-daily-python-03-f725811c7b2d">Python script to like the latest tweet of your followers!! | Daily Python #3</a></h4>
                         <p>This article is a tutorial on how to like the latest tweets of all your followers using Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.</p>
                     </blockquote>
@@ -107,7 +107,7 @@
                         <!-- <h2><a href="#">Ante mattis<br />
 										interdum dolor</a></h2> -->
                     </header>
-                    <blockquote class="embedly-card">
+                    <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-fetch-tweets-based-on-hashtags-daily-python-02-4ee26d7cefcc">Python script to fetch tweets based on hashtags(#)| Daily Python #2</a></h4>
                         <p>This article is a tutorial on how to fetch tweets based on given hashtags(#) using Python. tweepy - Library that provides easy access to Twitter APIs pip install tweepy Let's start by importing this library in our code. import
                             tweepy In order to access twitter APIs through tweepy, we first need to create a twitter application.</p>
@@ -118,7 +118,7 @@
                     <header>
                         <span class="date">January 4, 2020</span>
                     </header>
-                    <blockquote class="embedly-card">
+                    <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/analytics-vidhya/python-script-to-track-amazon-prices-4b2610da5f49">Python script to track Amazon Prices!! | Daily Python #1</a></h4>
                         <p>This article is a tutorial on how to track the prices of products on any e-commerce platform using a simple Python web scraper. requests - HTTP Library for Python bs4 - Library used for web scraping smtplib - Library for sending
                             emails. pip install requests bs4 smptlib Let's start by importing the libraries in the code...</p>
@@ -131,7 +131,7 @@
                         <!-- <h2><a href="#">Odio magna<br />
 										sed consectetur</a></h2> -->
                     </header>
-                    <blockquote class="embedly-card">
+                    <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://blog.goodaudience.com/building-the-na%C3%AFve-bayes-classifier-from-scratch-in-python-b0717fa022d8">Building the Naïve Bayes Classifier from scratch in Python</a></h4>
                         <p>Bayes' big deal.In this article, Let us go through the theory and working of the well known and most used classification model - Naïve Bayes Classifier. If you are well versed with how the Naive Bayes classifier works feel free
                             to check out the example by visiting my Github repository here.</p>
@@ -142,7 +142,7 @@
                     <header>
                         <span class="date">September 16, 2018</span>
                     </header>
-                    <blockquote class="embedly-card">
+                    <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://blog.goodaudience.com/solving-8-puzzle-using-a-algorithm-7b509c331288">Solving 8-Puzzle using A* Algorithm.</a></h4>
                         <p>N-Puzzle or sliding puzzle is a popular puzzle that consists of N tiles where N can be 8, 15, 24 and so on. In our example N = 8. The puzzle is divided into sqrt(N+1) rows and sqrt(N+1) columns. Eg...</p>
                     </blockquote>
