--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
 
             <!-- Posts -->
             <section class="posts">
+
+
+                <article>
+                    <header>
+                        <span class="date">January 9, 2020</span>
+                        <!-- <h2><a href="#">Sed magna<br />
+                                        ipsum faucibus</a></h2> -->
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-search-for-news-based-on-keywords-daily-python-5-509348bd190e">Python script to search for News based on keywords | Daily Python #5</a></h4>
+                        <p>This article is a tutorial on how to search for news based on given keywords using news API in Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.
+                            newsapi - Library to fetch news from various news sources.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                    <!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+                    <ul class="actions special">
+                        <li><a href="#" class="button">Full Story</a></li>
+                    </ul> -->
+                </article>
+
+
                 <article>
                     <header>
                         <span class="date">January 8, 2020</span>
