--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Ajinkya Sonawane</title>
+    <title>Ajinkya Sonawane | Gallery</title>
     <link rel="shortcut icon" type="image/jpg" href="images/title.jpg">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -18,17 +18,7 @@
 <body class="is-preload">
 
     <!-- Wrapper -->
-    <div id="wrapper" class="fade-in">
-
-        <!-- Intro -->
-        <div id="intro">
-            <h1>MY PORTFOLIO
-            </h1>
-            <p>A showcase of my projects and articles </p>
-            <ul class="actions">
-                <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-            </ul>
-        </div>
+    <div id="wrapper">
 
         <!-- Header -->
         <header id="header">
@@ -40,6 +30,7 @@
             <ul class="links">
                 <li><a href="index.html">Articles</a></li>
                 <!-- <li><a href="generic.html">Projects</a></li> -->
+                <li><a href="projects.html">Projects</a></li>
                 <li class="active"><a href="gallery.html">Gallery</a></li>
                 <li><a href="index.html#footer">Contact</a></li>
             </ul>
@@ -110,11 +101,26 @@
                 <article>
                     <header>
                         <span class="date">January 8, 2020</span>
+                        <h2><a>Anchor at <br />
+										Vishwapreneur '16</a></h2>
+                    </header>
+                    <a class="image fit"><img src="images/anchor.png" alt="" /></a>
+                </article>
+
+                <article>
+                    <header>
+                        <span class="date">January 8, 2020</span>
                         <h2><a href="#">Anchor at <br />
 										Vishwapreneur '16</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="images/anchor.png" alt="" /></a>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://www.youtube.com/watch?v=0kK8PRqHROg">Vishwapreneur '16: Session 5 - The β Before α - Panel Discussion</a></h4>
+                        <p>Enjoy the videos and music you love, upload original content, and share it all with friends, family, and the world on YouTube.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
                 </article>
+
+
             </section>
 
             <!-- Footer -->
