--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <ul class="links">
                 <li class="active"><a href="index.html">Articles</a></li>
                 <!-- <li><a href="generic.html">Projects</a></li> -->
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#footer">Contact</a></li>
             </ul>
