Update Download icon

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a href="#" class="image main"><img src="images/jinx.jpg" alt="" /></a>
                 </center>
                 <ul class="actions special">
-                    <li><a href="CV.pdf" class="button large" download="">Download CV</a></li>
+                    <li><a href="CV.pdf" class="button icon large solid fa-download" download>Download CV</a></li>
                 </ul>
             </article>
 
