--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
             <section class="split contact">
                 <section>
                     <h3>Phone</h3>
-                    <p><a href="#">(+91) 8237484599</a></p>
+                    <p><a href="tel:(+91) 8237484599">(+91) 8237484599</a></p>
                 </section>
                 <section>
                     <h3>Email</h3>
-                    <p><a href="#">sonawaneajinks@gmail.com</a></p>
+                    <p><a href="mailto:sonawaneajinks@gmail.com">sonawaneajinks@gmail.com</a></p>
                 </section>
                 <section>
                     <h3>Social</h3>
