--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,22 @@
         <div id="main">
 
             <section class="posts">
-
+                <article>
+                    <header>
+                        <h2><a href="#">youtube channel for<br />
+                                        Luxury listings | Travel | Food</a></h2>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://www.youtube.com/watch?v=gaPGpUU6jKQ">Sai Royale - Luxury Apartments in Pune | ₹1.5 Crore | Countless Storeys</a></h4>
+                        <p>Vishwakarma Group's Sai Royale - 2/3 BHK Luxury Apartments in Wanowrie, Pune To get notified subscribe to our channel https://www.youtube.com/channel/UCoEAf0U-QUWl9TeMZSC8D3w?sub_confirmation=1 Follow us on https://www.instagram.com/countless.storeys/
+                            Music by Sophonic Media http://instrumentalsfree.com</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                    <!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                    <ul class="actions special">
+                        <li><a href="#" class="button">Full Story</a></li>
+                    </ul> -->
+                </article>
 
                 <article>
                     <header>
