Added Article 06 YT Downloader

--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
             <!-- Posts -->
             <section class="posts">
 
+                <article>
+                    <header>
+                        <span class="date">January 10, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-download-youtube-videos-daily-python-6-c3788be5b6b1">Python script to download YouTube videos | Daily Python #6</a></h4>
+                        <p>This article is a tutorial on how to download YouTube videos using Python and a few libraries. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
 
                 <article>
                     <header>
