Added Article 07 card

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
 
             <!-- Posts -->
             <section class="posts">
+                <article>
+                    <header>
+                        <span class="date">January 11, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-edit-google-sheets-daily-python-7-aadce27846c0">Python script to edit Google Sheets | Daily Python #7</a></h4>
+                        <p>This article is a tutorial on how to access and edit Google Sheets using Python and Google API. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily. Visit
+                            https://console.developers.google.com/ to set up the required APIs.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
 
                 <article>
                     <header>
@@ -83,7 +94,6 @@
                     </blockquote>
                     <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
                 </article>
-
 
                 <article>
                     <header>
