Added Affiliate Links

--- a/recommendations.html
+++ b/recommendations.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Ajinkya Sonawane | Proejcts</title>
+    <title>Ajinkya Sonawane | Recommendations</title>
     <link rel="shortcut icon" type="image/jpg" href="images/title.jpg">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -30,9 +30,9 @@
             <ul class="links">
                 <li><a href="index.html">Articles</a></li>
                 <!-- <li><a href="generic.html">Projects</a></li> -->
-                <li class="active"><a href="projects.html">Proejcts</a></li>
+                <li><a href="projects.html">Proejcts</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="recommendations.html">Recommendations</a></li>
+                <li class="active"><a href="recommendations.html">Recommendations</a></li>
                 <li><a href="index.html#footer">Contact</a></li>
             </ul>
             <ul class="icons">
@@ -47,33 +47,17 @@
         <div id="main">
 
             <section class="posts">
+
                 <article>
                     <header>
-                        <h2><a href="#">youtube channel for<br />
-                                        Luxury listings | Travel | Food</a></h2>
+                        <!-- <h2><a href="#">Sed magna<br />
+                                        ipsum faucibus</a></h2> -->
                     </header>
-                    <blockquote class="embedly-card" data-card-controls="0">
-                        <h4><a href="https://www.youtube.com/watch?v=gaPGpUU6jKQ">Sai Royale - Luxury Apartments in Pune | ₹1.5 Crore | Countless Storeys</a></h4>
-                        <p>Vishwakarma Group's Sai Royale - 2/3 BHK Luxury Apartments in Wanowrie, Pune To get notified subscribe to our channel https://www.youtube.com/channel/UCoEAf0U-QUWl9TeMZSC8D3w?sub_confirmation=1 Follow us on https://www.instagram.com/countless.storeys/
-                            Music by Sophonic Media http://instrumentalsfree.com</p>
-                    </blockquote>
-                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=sonawaneajink-21&marketplace=amazon&region=IN&placement=9387572943&asins=9387572943&linkId=a4812bcdd2b087998cb124bf5245f4b1&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+                    </iframe>
                     <!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
                     <ul class="actions special">
-                        <li><a href="#" class="button">Full Story</a></li>
-                    </ul> -->
-                </article>
-
-                <article>
-                    <header>
-
-                        <h2><a href="#">New Credibility using<br />
-                                        Deep Learning</a></h2>
-                    </header>
-                    <a href="#" class="image fit"><img src="images/beporj.png" alt="" /></a>
-                    <!-- <p>Project done in my final year of engineering.Developed a system that could fetch live tweets based on given keywords (eg. LSPOLLS) and give a credibility score to it. This was done by fetching news articles related to the tweet and
-                        finding the similarity between the tweet and the news article(s) using LSTM.</p> -->
-                    <!-- <ul class="actions special"> 
                         <li><a href="#" class="button">Full Story</a></li>
                     </ul> -->
                 </article>
@@ -83,57 +67,46 @@
                         <!-- <h2><a href="#">Sed magna<br />
                                         ipsum faucibus</a></h2> -->
                     </header>
-                    <blockquote class="embedly-card" data-card-controls="0">
-                        <h4><a href="https://play.google.com/store/apps/details?id=com.miniproject.www.spinbottle">Bottle Spinner - Apps on Google Play</a></h4>
-                        <p>Don't have a bottle ? Download and Spin.</p>
-                    </blockquote>
-                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=sonawaneajink-21&marketplace=amazon&region=IN&placement=9352134915&asins=9352134915&linkId=f72867591e3ac2e49b0e7886a016f474&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+                    </iframe>
                     <!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
                     <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
                     <ul class="actions special">
                         <li><a href="#" class="button">Full Story</a></li>
                     </ul> -->
                 </article>
+
 
 
                 <article>
                     <header>
                         <!-- <h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2> -->
+                                        ipsum faucibus</a></h2> -->
                     </header>
-                    <blockquote class="embedly-card" data-card-controls="0">
-                        <h4><a href="https://play.google.com/store/apps/details?id=com.bot.chat.demo">ConnectMe - Apps on Google Play</a></h4>
-                        <p>ConnectMe is an search as a service application developed by Global Super Elite which helps the user provide a list of services to user wishes to use or access in an interactive, yet simpler way with the help of chatbot.</p>
-                    </blockquote>
-                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=sonawaneajink-21&marketplace=amazon&region=IN&placement=1612680194&asins=1612680194&linkId=1db3be4fdbaa25edec98377d5979dcfe&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+                    </iframe>
                     <!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
                     <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
                     <ul class="actions special">
                         <li><a href="#" class="button">Full Story</a></li>
                     </ul> -->
                 </article>
+
                 <article>
                     <header>
-                        <!-- <h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2> -->
+                        <!-- <h2><a href="#">Sed magna<br />
+                                        ipsum faucibus</a></h2> -->
                     </header>
-                    <blockquote class="embedly-card" data-card-controls="0">
-                        <h4><a href="https://github.com/Ajinkya-Sonawane/Python/tree/master/Twitter%20Sentiment%20Analysis">Ajinkya-Sonawane/Python</a></h4>
-                        <p>Twitter Sentitment Analysis using Python</p>
-                    </blockquote>
-                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=sonawaneajink-21&marketplace=amazon&region=IN&placement=0062312685&asins=0062312685&linkId=f81cf77514f0bd869624856dc064a402&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+                    </iframe>
+                    <!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+                    <ul class="actions special">
+                        <li><a href="#" class="button">Full Story</a></li>
+                    </ul> -->
                 </article>
-                <article>
-                    <header>
-                        <!-- <h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2> -->
-                    </header>
-                    <blockquote class="embedly-card" data-card-controls="0">
-                        <h4><a href="https://github.com/Ajinkya-Sonawane/College-Drive">Ajinkya-Sonawane/College-Drive</a></h4>
-                        <p>Mini Projects based on Java. Contribute to Ajinkya-Sonawane/College-Drive development by creating an account on GitHub.</p>
-                    </blockquote>
-                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-                </article>
+
+
             </section>
 
         </div>
