--- a/gallery.html
+++ b/gallery.html
@@ -30,8 +30,9 @@
             <ul class="links">
                 <li><a href="index.html">Articles</a></li>
                 <!-- <li><a href="generic.html">Projects</a></li> -->
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html">Proejcts</a></li>
                 <li class="active"><a href="gallery.html">Gallery</a></li>
+                <li><a href="recommendations.html">Recommendations</a></li>
                 <li><a href="index.html#footer">Contact</a></li>
             </ul>
             <ul class="icons">
