Updated affiliate links

--- a/recommendations.html
+++ b/recommendations.html
@@ -67,6 +67,20 @@
                         <!-- <h2><a href="#">Sed magna<br />
                                         ipsum faucibus</a></h2> -->
                     </header>
+                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=sonawaneajink-21&marketplace=amazon&region=IN&placement=8120340078&asins=8120340078&linkId=abe30165c8d6a690936da7d2eee4b429&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+                    </iframe>
+                    <!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+                    <ul class="actions special">
+                        <li><a href="#" class="button">Full Story</a></li>
+                    </ul> -->
+                </article>
+
+                <article>
+                    <header>
+                        <!-- <h2><a href="#">Sed magna<br />
+                                        ipsum faucibus</a></h2> -->
+                    </header>
                     <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=sonawaneajink-21&marketplace=amazon&region=IN&placement=9352134915&asins=9352134915&linkId=f72867591e3ac2e49b0e7886a016f474&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
                     </iframe>
                     <!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
@@ -76,6 +90,19 @@
                     </ul> -->
                 </article>
 
+                <article>
+                    <header>
+                        <!-- <h2><a href="#">Sed magna<br />
+                                        ipsum faucibus</a></h2> -->
+                    </header>
+                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=sonawaneajink-21&marketplace=amazon&region=IN&placement=0471778648&asins=0471778648&linkId=e3405e5a63e04a93f536fc676ff38f57&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+                    </iframe>
+                    <!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+                    <ul class="actions special">
+                        <li><a href="#" class="button">Full Story</a></li>
+                    </ul> -->
+                </article>
 
 
                 <article>
