--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
 
             <!-- Posts -->
             <section class="posts">
+
+                <article>
+                    <header>
+                        <span class="date">January 11, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-search-content-using-youtube-data-api-daily-python-8-1084776a6578">Python script to search content using YouTube Data API | Daily Python #8</a></h4>
+                        <p>This article is a tutorial on how to utilize YouTube Data API using Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+
                 <article>
                     <header>
                         <span class="date">January 11, 2020</span>
