--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
 
                 <article>
                     <header>
-                        <span class="date">January 11, 2020</span>
+                        <span class="date">January 13, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-fetch-bank-details-from-ifsc-daily-python-9-5081a33025c4">Python script to fetch Bank details from IFSC | Daily Python #9</a></h4>
+                        <p>This article is a tutorial on fetching Bank details from IFSC using Python and Razorpay IFSC Toolkit. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.
+                            requests- Library to making HTTP requests.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+                <article>
+                    <header>
+                        <span class="date">January 12, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-search-content-using-youtube-data-api-daily-python-8-1084776a6578">Python script to search content using YouTube Data API | Daily Python #8</a></h4>
