--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
 
                 <article>
                     <header>
+                        <span class="date">January 14, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-fetch-real-time-stock-index-forex-data-daily-python-10-2780e3d46d3c">Python script to fetch Real-Time Stock/Index/Forex data !!| Daily Python #10</a></h4>
+                        <p>This article is a tutorial on how to fetch Stock/Index data using Python and World Trading Data API. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.
+                            First, let's create an account on https://www.worldtradingdata.com/.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+                <article>
+                    <header>
                         <span class="date">January 13, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
