--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
                         <span class="date">January 14, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/implementing-basic-data-structures-in-python-part-1-daily-python-12-caae6cd868a2">Implementing basic Data Structures in Python - Part 1| Daily Python #12</a></h4>
+                        <p>This article is a tutorial that covers the implementation of basic data structures - Linked List, Stack, and Queue. Later articles will cover the remaining data structures. This article is a part of Daily Python challenge that
+                            I have taken up for myself. I will be writing short python articles daily.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+
+                <article>
+                    <header>
+                        <span class="date">January 14, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-generate-meme-daily-python-11-e08aee07e940">Python script to generate Meme | Daily Python #11</a></h4>
                         <p>This article is a tutorial on how to generate a meme using Python and ImgFlip API. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily. requests - Library
                             to making HTTP requests.</p>
