--- a/index.html
+++ b/index.html
@@ -76,7 +76,20 @@
 
                 <article>
                     <header>
-                        <span class="date">January 14, 2020</span>
+                        <span class="date">January 17, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-fetch-linkedin-profile-urls-daily-python-13-660de07900f3">Python script to fetch LinkedIn Profile URLs !!! | Daily Python #13</a></h4>
+                        <p>This article is a tutorial on how to fetch LinkedIn profile URLs using Python. Searching for a job? Wanna connect to recruiters in an area? LinkedIn is the best place to connect to professionals. This article will focus on developing
+                            a python script to fetch the URLs of technical recruiters on LinkedIn.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+
+                <article>
+                    <header>
+                        <span class="date">January 16, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/implementing-basic-data-structures-in-python-part-1-daily-python-12-caae6cd868a2">Implementing basic Data Structures in Python - Part 1| Daily Python #12</a></h4>
@@ -89,7 +102,7 @@
 
                 <article>
                     <header>
-                        <span class="date">January 14, 2020</span>
+                        <span class="date">January 15, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-generate-meme-daily-python-11-e08aee07e940">Python script to generate Meme | Daily Python #11</a></h4>
