--- a/index.html
+++ b/index.html
@@ -76,8 +76,21 @@
 
                 <article>
                     <header>
-                        <span class="date">January 17, 2020</span>
+                        <span class="date">January 20, 2020</span>
                     </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/building-a-simple-rest-api-using-python-flask-daily-python-14-488d63701bd2">Building a simple REST API using Python & Flask | Daily Python #14</a></h4>
+                        <p>This article is a tutorial on how to create a Rest API using Python and Flask. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily. I have previously covered
+                            how to utilize various APIs using Python.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+                <article>
+                    <header>
+                        <span class="date">January 18, 2820</span>
+                    </header>
+                    8
                     <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-fetch-linkedin-profile-urls-daily-python-13-660de07900f3">Python script to fetch LinkedIn Profile URLs !!! | Daily Python #13</a></h4>
                         <p>This article is a tutorial on how to fetch LinkedIn profile URLs using Python. Searching for a job? Wanna connect to recruiters in an area? LinkedIn is the best place to connect to professionals. This article will focus on developing
