--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
 
             <!-- Posts -->
             <section class="posts">
+                <article>
+                    <header>
+                        <span class="date">January 21, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-consume-the-omdb-api-daily-python-15-aa9457f6d090">Python script to consume the OMDb API| Daily Python #15</a></h4>
+                        <p>This article is a tutorial on how to consume the Open Movie Database API using Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily. Create an account
+                            on the OMDb website: http://www.omdbapi.com/.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
 
                 <article>
                     <header>
