--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
             <section class="posts">
                 <article>
                     <header>
+                        <span class="date">January 22, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/implementing-basic-data-structures-in-python-part-2-daily-python-16-26cd5349031b">Implementing basic Data Structures in Python - Part 2| Daily Python #16</a></h4>
+                        <p>This article is a tutorial that covers the implementation of basic data structures - Graphs and Trees. This article is in continuation with Daily Python #12, which covers - LinkedList, Stack, and Queue. This article is a part of
+                            Daily Python challenge that I have taken up for myself.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+                <article>
+                    <header>
                         <span class="date">January 21, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
