--- a/index.html
+++ b/index.html
@@ -73,6 +73,33 @@
 
             <!-- Posts -->
             <section class="posts">
+
+                <article>
+                    <header>
+                        <span class="date">January 24, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/simple-stock-prediction-using-linear-regression-in-python-daily-python-18-ecfe23b76ce9">Stock Prediction using Multiple Linear Regression in Python | Daily Python #18</a></h4>
+                        <p>This article is a tutorial on predicting stock trends using Linear Regression in Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily. pandas -
+                            BSD-licensed library providing high-performance, easy-to-use data structures, and data analysis tools.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+
+                <article>
+                    <header>
+                        <span class="date">January 22, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/consuming-nasa-api-using-python-part-1-daily-python-17-4ce104fa47ab">Consuming NASA API using Python - Part 1 | Daily Python #17</a></h4>
+                        <p>This article is a tutorial on how to consume the NASA API using Python. This is the first part of the NASA API series. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python
+                            articles daily.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+
                 <article>
                     <header>
                         <span class="date">January 22, 2020</span>
