--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
 
                 <article>
                     <header>
+                        <span class="date">January 25, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/developing-a-simple-key-logger-using-python-daily-python-19-3338b90e68d7">Developing a simple Key Logger using Python | Daily Python #19</a></h4>
+                        <p>This article is a tutorial on how to develop a simple key logger using Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+                <article>
+                    <header>
                         <span class="date">January 24, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
