--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
 
                 <article>
                     <header>
+                        <span class="date">January 26, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/introduction-to-pygame-basics-part-1-daily-python-20-69374c1b26f1">Introduction to Pygame Basics - Part 1 | Daily Python #20</a></h4>
+                        <p>This article is an introduction to the Pygame module basics - Image load, movement, and key presses. pygame - Library for making multimedia applications like games pip install pygame is a Free and Open Source python programming
+                            language library for making multimedia applications like games built on top of the excellent SDL library.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+
+                <article>
+                    <header>
                         <span class="date">January 25, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
