--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <header>
                         <span class="date">January 18, 2820</span>
                     </header>
-                    8
+
                     <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-fetch-linkedin-profile-urls-daily-python-13-660de07900f3">Python script to fetch LinkedIn Profile URLs !!! | Daily Python #13</a></h4>
                         <p>This article is a tutorial on how to fetch LinkedIn profile URLs using Python. Searching for a job? Wanna connect to recruiters in an area? LinkedIn is the best place to connect to professionals. This article will focus on developing
@@ -444,4 +444,4 @@
 
 </body>
 
-</html>
+</html
