--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
 
                 <article>
                     <header>
-                        <span class="date">January 26, 2020</span>
+                        <span class="date">January 28, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/python-script-to-block-websites-daily-python-22-ce53c68416ca">Python script to block Websites !!! | Daily Python #22</a></h4>
+                        <p>This article is a tutorial on how to block websites in a given time frame. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily. The host is an operating
+                            system file that maps hostnames to IP addresses.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+                <article>
+                    <header>
+                        <span class="date">January 27, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/implementing-basic-searching-algorithms-in-python-part-1-daily-python-21-70025990f2b6">Implementing basic searching algorithms in Python - Part 1 | Daily Python #21</a></h4>
