--- a/index.html
+++ b/index.html
@@ -70,9 +70,21 @@
                     <li><a href="CV.pdf" class="button icon large solid fa-download" download>Download CV</a></li>
                 </ul>
             </article>
-
             <!-- Posts -->
             <section class="posts">
+
+                <article>
+                    <header>
+                        <span class="date">January 29, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/daily-python/simple-decision-tree-classifier-using-python-daily-python-23-205635ac365d">Simple Decision Tree Classifier using Python | Daily Python #23</a></h4>
+                        <p>Importing the required packagesimport numpy as np import pandas as pd from sklearn.metrics import confusion_matrix from sklearn.model_selection import train_test_split from sklearn.tree import DecisionTreeClassifierfrom sklearn
+                            import treefrom sklearn.metrics import accuracy_score from sklearn.metrics import classification_report import graphviz # Function importing Datasetdef importdata(): balance_data = pd.read_csv('capitalshare.csv') balance_data
+                            = balance_data[['Duration','Start station number','End station number','Member</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
 
                 <article>
                     <header>
