--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul class="links">
                 <li class="active"><a href="index.html">Articles</a></li>
                 <!-- <li><a href="generic.html">Projects</a></li> -->
-                <li><a href="projects.html">Proejcts</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="recommendations.html">Recommendations</a></li>
                 <li><a href="index.html#footer">Contact</a></li>
