--- a/recommendations.html
+++ b/recommendations.html
@@ -30,7 +30,7 @@
             <ul class="links">
                 <li><a href="index.html">Articles</a></li>
                 <!-- <li><a href="generic.html">Projects</a></li> -->
-                <li><a href="projects.html">Proejcts</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li class="active"><a href="recommendations.html">Recommendations</a></li>
                 <li><a href="index.html#footer">Contact</a></li>
