--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
 
                 <article>
                     <header>
+                        <span class="date">January 30, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/daily-python/interesting-python-modules-for-beginners-daily-python-24-dd73f47f5cf6">Interesting Python modules for Beginners | Daily Python #24</a></h4>
+                        <p>This article lists a few interesting modules to play around whilst learning Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+                <article>
+                    <header>
                         <span class="date">January 29, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
